--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,9 +1,9 @@
 <div class="container" style="margin-top: 15px">
     <h2>To do list</h2>
-    <table class="table table-hover table-striped table-bordered col-md-8 offset-2" id="table1" >
+    <table class="table table-hover table-striped table-bordered col-md-8 offset-2 mat-elevation-z8" mat-table matSort id="table1" >
         <thead class="thead-light">
                 <tr class="tasks">
-                    <th (click)="sortTable(0)" >Title</th>
+                    <th (click)="sortTable(0)">Title </th>
                     <th (click)="sortTable(1)">Closed date</th>
                     <th (click)="sortTable(2)">Status</th>
                 </tr>
@@ -13,7 +13,7 @@
             <tr *ngFor="let task of tasks; let i = index" class="tasks" routerLink="/task/{{i}}">
                 <td>{{ task.title }}</td>
                 <td>{{ task.closedDate | date: 'yyyy/MM/dd'}}</td>
-                <td *ngIf="task.closed_status; else doing">Completed</td>
+                <td *ngIf="task.closedStatus; else doing">Completed</td>
                 <ng-template #doing><td *ngIf="task.time_out; else not_time_out">Time out</td></ng-template>
                 <ng-template #not_time_out><td>Doing</td></ng-template>
             </tr>
