--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,12 +1,12 @@
 <div class="container" style="margin-top: 15px">
     <h2>To do list</h2>
-    <table class="table table-hover table-striped table-bordered col-md-8 offset-2 mat-elevation-z8" mat-table matSort id="table1" >
+    <table class="table table-hover table-striped table-bordered col-md-8 offset-2 mat-elevation-z8" id="table1">
         <thead class="thead-light">
-                <tr class="tasks">
-                    <th (click)="sortTable(0)">Title </th>
-                    <th (click)="sortTable(1)">Closed date</th>
-                    <th (click)="sortTable(2)">Status</th>
-                </tr>
+              <tr class="tasks">
+                  <th (click)="sortTable(0)">Title ▼</th>
+                  <th (click)="sortTable(1)">Closed date ▼</th>
+                  <th (click)="sortTable(2)">Status ▼</th>
+              </tr>
         </thead>
 
         <tbody>
